--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
+derive_more = "0.99"
 structopt = "0.3"
 tokio = { version = "1", features = ["full"] }
