Fetch a GitHub issue to clone
Use the `octocrab` library to fetch an issue by the number specified as
a command-line argument.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2018"
 
 [dependencies]
 derive_more = "0.99"
+octocrab = { version = "0.9", default-features = false, features = ["rustls"] }
 structopt = "0.3"
 tokio = { version = "1", features = ["full"] }
